--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -26,20 +26,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bienvenido"
-        android:textColor="@color/cianClaro"
-        android:textSize="36sp"
+        android:textColor="@android:color/transparent"
+        android:textSize="42sp"
         android:textStyle="bold"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="@font/fredoka"
+        android:gravity="center"
+        android:layerType="software"
         android:shadowColor="#66000000"
         android:shadowDx="1"
         android:shadowDy="1"
-        android:shadowRadius="3"
-        android:gravity="center"
+        android:shadowRadius="4"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.30"/>
+        app:layout_constraintVertical_bias="0.25" />
 
 
 
@@ -58,10 +59,16 @@
         android:layout_width="173dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
-        android:backgroundTint="@color/blanco"
+        android:background="@drawable/btn_ripple"
         android:text="@string/iniciarSesion"
         android:textColor="@color/negro"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:fontFamily="@font/fredoka"
+        android:letterSpacing="0.05"
+        android:textStyle="bold"
+        android:elevation="6dp"
+        android:stateListAnimator="@null"
+        android:translationZ="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -72,13 +79,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:backgroundTint="@color/blanco"
+        android:background="@drawable/btn_ripple"
         android:text="@string/registro"
         android:textColor="@color/negro"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:fontFamily="@font/fredoka"
+        android:letterSpacing="0.05"
+        android:textStyle="bold"
+        android:elevation="6dp"
+        android:stateListAnimator="@null"
+        android:translationZ="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.975" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
