--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fontFamily="@font/fredoka"
     tools:context=".Login">
 
     <ImageView
@@ -12,9 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:contentDescription="@null" />
+        android:contentDescription="Imagen de fondo difuminada"
+        android:importantForAccessibility="no" />
 
-
+    <!-- Guías para márgenes laterales -->
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
         android:layout_width="wrap_content"
@@ -29,33 +31,33 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95" />
 
-
+    <!-- Email -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/emailLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="368dp"
         android:hint="@string/emailTitulo"
-        app:layout_constraintEnd_toEndOf="@id/guideline2"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="260dp"
         app:layout_constraintStart_toStartOf="@id/guideline1"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/rounded_edittext"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:background="@drawable/rounded_edittext" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Contraseña -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/passwordLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:hint="@string/password"
         app:passwordToggleEnabled="true"
-        android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/emailLayout"
         app:layout_constraintStart_toStartOf="@id/guideline1"
         app:layout_constraintEnd_toEndOf="@id/guideline2">
@@ -68,26 +70,34 @@
             android:background="@drawable/rounded_edittext" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Botón Iniciar Sesión -->
     <Button
         android:id="@+id/button1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:backgroundTint="@color/principal"
+        android:backgroundTint="@color/blanco"
         android:text="@string/iniciarSesion"
-        android:textSize="18sp"
+        android:textColor="@color/negro"
+        android:textSize="20sp"
+        android:fontFamily="@font/fredoka"
+        android:background="@drawable/rounded_button"
         app:layout_constraintTop_toBottomOf="@id/passwordLayout"
         app:layout_constraintStart_toStartOf="@id/guideline1"
         app:layout_constraintEnd_toEndOf="@id/guideline2" />
 
+    <!-- Botón Recuperar Contraseña -->
     <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/principal"
+        android:backgroundTint="@color/blanco"
         android:text="@string/recuperarContrasenia"
-        android:textSize="18sp"
+        android:textColor="@color/negro"
+        android:textSize="20sp"
+        android:fontFamily="@font/fredoka"
+        android:background="@drawable/rounded_button"
         app:layout_constraintTop_toBottomOf="@id/button1"
         app:layout_constraintStart_toStartOf="@id/guideline1"
         app:layout_constraintEnd_toEndOf="@id/guideline2" />
