--- a/app/src/main/res/layout/activity_tipo_de_registro.xml
+++ b/app/src/main/res/layout/activity_tipo_de_registro.xml
@@ -16,6 +16,22 @@
         android:contentDescription="@null"
         android:importantForAccessibility="no" />
 
+    <!-- Botón atrás -->
+
+
+    <ImageView
+        android:id="@+id/btnAtras"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="start"
+        android:src="@drawable/flecha"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.042"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023" />
+
     <LinearLayout
         android:layout_width="305dp"
         android:layout_height="624dp"
